collab/htdocs/collabcommon/css/chat.css: Wrap long strings, e.g. URLs, to prevent them from collapsing outside the message container.

--- a/collab/htdocs/collabcommon/css/chat.css
+++ b/collab/htdocs/collabcommon/css/chat.css
@@ -153,6 +153,7 @@
     width: 100%;
     margin: 0.4em 0;
     padding: 6px;
+    word-wrap: break-word;
 }
 
 #content .collab_chat .chat .output .message .time {
